2019-12-04  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document 'use-post' for generic type
      of HTTP SMSC.
    * gw/smsc_http_p.h: add use_post flag.
    * gw/smsc_http.c: use 'use-post' boolean config from 'group = smsc'.
    * gw/smsc/http/generic.c: implement HTTP POST method support for the
      sending and receiving side of the 'system-type = generic'.
    * gwlib/cfg.def: add 'use-post' config directive to 'group = smsc'.
    * gwlib/http.[ch]: export function parse_cgivars() publically.
    This patchset adds support for the HTTP POST method for the SMSC HTTP
    type 'generic'. Handling long Unicode messages can easily exceed the
    max length limits of HTTP GET URLs on various HTTP servers and HTTP
    proxy components, causing HTTP/502 and other defects in processing.
    Now we can use content-type 'application/x-www-form-urlencoded' data
    in the HTTP POST body to overcome those limitations if necessary.
    
2019-12-04  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: clarify dlr-url and dlr-mask usage in
      'group = sendsms-user' contexts.
    * gw/smsbox.c: fix non-working 'dlr-url' for 'group = sendsms-user',
      which would never trigger the if statement, since the upper layer
      of the sendsms HTTP interface would init msg->sms.dlr_url with a 
      empty string; now we handle also a 'dlr-mask' in the group as
      default value if no HTTP GET paramter is presented.
    * gw/urltrans.c: ensure we also use 'dlr-mask' as config directive in
      the 'group = sendsms-user' context as possible default.
    * gwlib/cfg.def: add 'dlr-mask' to 'group = sendsms-user'.
    This patchset fixes the default 'dlr-url' handling for the sendsms-user
    group handling, where the default would effetively never be handled.    
      
2019-11-27  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_smscconn.c: fix missing DLR SMSC FAIL payload <NACK/xxx> for 
      concatenated messages.
      