@@ -463,12 +463,49 @@ static void generic_receive_sms(SMSCConn *conn, HTTPClient *client,
 }
 
 
+static void convert_charset(Msg *msg, Octstr *charset, Octstr **content_type)
+{
+    switch (msg->sms.coding) {
+    case DC_7BIT:
+    default:
+        if (charset_convert(msg->sms.msgdata, "UTF-8", octstr_get_cstr(charset)) == 0) {
+            *content_type = octstr_format("application/x-www-form-urlencoded; charset=\"%s\"",
+                    octstr_get_cstr(charset));
+        } else {
+            error(0, "Failed to convert msgdata from UTF-8 to %s, will leave as is",
+                  octstr_get_cstr(charset));
+            *content_type = octstr_format("application/x-www-form-urlencoded; charset=\"UTF-8\"");
+        }
+        break;
+    case DC_UCS2:
+        if (charset_convert(msg->sms.msgdata, "UTF-16BE", octstr_get_cstr(charset)) == 0) {
+            *content_type = octstr_format("application/x-www-form-urlencoded; charset=\"%s\"",
+                    octstr_get_cstr(charset));
+        } else {
+            error(0, "Failed to convert msgdata from UCS-2 to %s, will leave as is",
+                  octstr_get_cstr(charset));
+            *content_type = octstr_format("application/x-www-form-urlencoded; charset=\"UTF-16BE\"");
+        }
+        break;
+    case DC_8BIT:
+        *content_type = octstr_format("application/x-www-form-urlencoded");
+        break;
+    }
+}
+
+
 static int generic_send_sms(SMSCConn *conn, Msg *sms)
 {
     ConnData *conndata = conn->data;
     Octstr *url = NULL;
     List *headers;
     HTTPURLParse *p;
+    Octstr *content_type = NULL;
+
+    /* Transcode payload if required. */
+    if (conndata->alt_charset) {
+        convert_charset(sms, conndata->alt_charset, &content_type);
+    }
 
     /* We use the escape code population function from our
      * URLTranslation module to fill in the appropriate values
@@ -485,7 +522,7 @@ static int generic_send_sms(SMSCConn *conn, Msg *sms)
                 p->port, octstr_get_cstr(p->path));
         debug("smsc.http.generic", 0, "HTTP[%s]: Sending POST request <%s>",
               octstr_get_cstr(conn->id), octstr_get_cstr(url));
-        http_header_add(headers, "Content-Type", "application/x-www-form-urlencoded; charset=\"UTF-8\"");
+        http_header_add(headers, "Content-Type", octstr_get_cstr(content_type));
         http_start_request(conndata->http_ref, HTTP_METHOD_POST, url, headers,
                            p->query, 0, sms, NULL);
         http_urlparse_destroy(p);
@@ -497,6 +534,7 @@ static int generic_send_sms(SMSCConn *conn, Msg *sms)
     }
 
     octstr_destroy(url);
+    octstr_destroy(content_type);
     http_destroy_headers(headers);
 
     return 0;
